# putitinthepizza.com

./: .gitignore  CNAME  Capfile  Cargo.toml  Changelog.md  Dockerfile  Gemfile  Passengerfile.json  Trunk.toml  app.rb  config.ru  faywrays.html  index.html  index_old.html
.github/workflows/: build_and_deploy.yml  ci.yml  publish-gh-pages.yml  static.yml
assets/: robots.txt
assets/css/: theme.css
config/: deploy.rb
config/deploy/: production.rb
css/: theme.css
src/: main.rs  thumb.rs
views/: fay_wrays.erb  index.erb  index_old.html  layout.erb
