[package]
name = "putitinthepizza"
version = "3.0.0"
edition = "2021"
publish = false

[dependencies]
gloo-utils = "0.2"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Element", "HtmlMediaElement"] }
yew = { version = "0.21", features = ["csr"] }
